--- a/SlnInventario/Inventario/Views/Categorias/Delete.cshtml
+++ b/SlnInventario/Inventario/Views/Categorias/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Inventario.Models.Categorias
+﻿@model Inventario.Models.Categoria
 
 @{
     ViewBag.Title = "Delete";
@@ -9,31 +9,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Categorias</h4>
+    <h4>Categoria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.nombre)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.esArchivo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.esArchivo)
+            @Html.DisplayFor(model => model.Nombre)
         </dd>
 
     </dl>
