--- a/SlnInventario/Inventario/Views/Categorias/Details.cshtml
+++ b/SlnInventario/Inventario/Views/Categorias/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Inventario.Models.Categorias
+﻿@model Inventario.Models.Categoria
 
 @{
     ViewBag.Title = "Details";
@@ -8,36 +8,20 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Categorias</h4>
+    <h4>Categoria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.nombre)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.esArchivo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.esArchivo)
+            @Html.DisplayFor(model => model.Nombre)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.idCategoria }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.IdCategoria }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
