--- a/SlnInventario/Inventario/Views/Categorias/Edit.cshtml
+++ b/SlnInventario/Inventario/Views/Categorias/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Inventario.Models.Categorias
+﻿@model Inventario.Models.Categoria
 
 @{
     ViewBag.Title = "Edit";
@@ -13,34 +13,16 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Categorias</h4>
+        <h4>Categoria</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.idCategoria)
+        @Html.HiddenFor(model => model.IdCategoria)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.esArchivo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.esArchivo)
-                    @Html.ValidationMessageFor(model => model.esArchivo, "", new { @class = "text-danger" })
-                </div>
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
             </div>
         </div>
 
